# CGII-Tarea2-30182893-JhonatanHomsany

./: .gitattributes  CMakeLists.txt
Tarea2-JhonatanHomsany/: CMakeLists.txt
Tarea2-JhonatanHomsany/assets/: Link_N64.glb  escena_guardada.glb  jarron.glb  license.txt  scene.gltf
Tarea2-JhonatanHomsany/assets/full/: raw_flat_512x128x512_i32.nrrd  raw_flat_512x128x512_rgba.nrrd  raw_flat_512x128x512_rgba.raw  raw_world_512x128x512_i32.nrrd  raw_world_512x128x512_rgba.nrrd  raw_world_512x128x512_rgba.raw
Tarea2-JhonatanHomsany/assets/mini/: raw_flat_256x64x256_i32.nrrd  raw_flat_256x64x256_rgba.nrrd  raw_flat_256x64x256_rgba.raw  txt_flat_256x64x256_i32.nrrd  txt_flat_256x64x256_rgba.nrrd  txt_flat_256x64x256_rgba.raw
Tarea2-JhonatanHomsany/assets/objetos/: foolc.nrrd  raw_cube_64x64x64_i32.nrrd  raw_cube_64x64x64_rgba.nrrd  raw_cube_64x64x64_rgba.raw  raw_sphere_64x64x64_i32.nrrd  raw_sphere_64x64x64_rgba.nrrd  txt_cube_64x64x64_i32.nrrd  txt_cube_64x64x64_rgba.nrrd  txt_cube_64x64x64_rgba.raw  txt_sphere_64x64x64_i32.nrrd  txt_sphere_64x64x64_rgba.nrrd
Tarea2-JhonatanHomsany/include/: Application.h  Camera.h  GizmoRenderer.h  Lighting.h  Mesh.h  Ray.h  Renderer.h  Scene.h  SceneObject.h  Shader.h  Tarea2-JhonatanHomsany.h  Volume.h  VolumeRenderer.h
Tarea2-JhonatanHomsany/include/tools/: BasicShapesGenerator.h  FileManager.h  GLFWManager.h  GLTFManager.h  InputPicker.h  RevolutionSolidGenerator.h  ShadowManager.h  StoneburnerManager.h  TextureManager.h  UIManager.h
Tarea2-JhonatanHomsany/shaders/: default.frag  default.vert  flat.frag  line.frag  line.vert  raytrace.frag  raytrace.vert  shadowVolume.frag  shadowVolume.geom  shadowVolume.vert  volume.frag  volume.vert
Tarea2-JhonatanHomsany/src/: Application.cpp  Camera.cpp  GizmoRenderer.cpp  Mesh.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Tarea2-JhonatanHomsany.cpp  Volume.cpp  VolumeRenderer.cpp
Tarea2-JhonatanHomsany/src/tools/: BasicShapesGenerator.cpp  FileManager.cpp  GLFWManager.cpp  GLTFManager.cpp  InputPicker.cpp  RevolutionSolidGenerator.cpp  ShadowManager.cpp  StoneburnerManager.cpp  TextureManager.cpp  UIManager.cpp  tinyfiledialogs.c
